--- a/manifest.json
+++ b/manifest.json
@@ -1,1 +1,24 @@
-
+{
+  "manifest_version": 3,
+  "name": "Schoology Plus Lite",
+  "version": "1.0",
+  "description": "Enhancements for Schoology users.",
+  "permissions": ["storage", "activeTab"],
+  "background": {
+    "service_worker": "background.js"
+  },
+  "content_scripts": [
+    {
+      "matches": ["https://*.schoology.com/*"],
+      "js": ["content.js"]
+    }
+  ],
+  "action": {
+    "default_popup": "popup.html",
+    "default_icon": {
+      "16": "images/icon16.png",
+      "48": "images/icon48.png",
+      "128": "images/icon128.png"
+    }
+  }
+}
